src/main/webapp/css/index.css
/* Root styling */

#react-root {
    font-size: 14px;
    font-family: Roboto;
}

.mainPage:focus {
    outline: none;
}

.pageContent {
    padding-top: 15px;
}

.garbageCan {
    font-size: 20px;
    color: white;
    padding: 10px 20px;
}

.exportSpinner {
    text-align: center;
}

.programPrettyName {
    padding: 0px 12px 12px 12px;
    text-align: center;
    font-size: 15px;
    font-weight: 500;
}


/* Styling for SemesterTable */

.semesterTableContainer {
    min-width: 760px;
    width: 70%;
    display: inline-block;
    position: absolute;
    right: 0px;
    padding: 0px 15px;
}

.semesterTable {
    border: none;
    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 6px, rgba(0, 0, 0, 0.12) 0px 1px 4px;
}

.semesterTable th {
    font-weight: 500;
}

.semesterTable tr > td:first-of-type {
    vertical-align: middle;
}

/* Remove default border from table so we can add a box-shadow instead */

.semesterTable tr > th:first-of-type,
.semesterTable tr > td:first-of-type {
    border-left: none;
}

.semesterTable tr > th:last-of-type,
.semesterTable tr > td:last-of-type {
    border-right: none;
}

.semesterTable tr:last-of-type > td {
    border-bottom: none;
}

/* Styling for SemesterList */

.semesterList {
    border: 1px solid #DDDDDD;
    border-radius: 5px;
    display: inline-block;
    margin-bottom: 20px;
    width: 100%;
}

.semesterListItem:first-of-type {
    border-top: none;
}

.semesterListItem {
    border-top: 1px solid #DDDDDD;
    border-bottom: none;
}

.semesterListItem .courseList {
    margin-bottom: 6px;
}

.semesterID {
    font-weight: bold;
    margin-top: 6px;
    margin-bottom: 2px;
}

/* Styling for SemesterBox */

.semesterBox {
    min-height: 125px;
}

.semesterBox input {
    margin-left: 4px;
    height: 16px;
    width: 16px;
}
.noCoursesIndicator, .workTermIndicator {
    vertical-align: middle;
}

.course {
    display: flex;
    padding: 0px 8px;
    cursor: pointer;
    width: 160px;
    margin: 6px auto;
    border-radius: 5px;
    border: 1px solid #DDDDDD;
    background-color: white;
    font-size: 14px;
    padding-top: 2px;
    color: #333333;
}

.course:hover {
    background-color: #E6E6E6;
}

.course:active {
    background-color: #D3D3D3;
}

.beingDragged {
    opacity: 0;
}

.grabbable {
    cursor: move; /* fallback if grab cursor is unsupported */
    cursor: grab;
    cursor: -moz-grab;
    cursor: -webkit-grab;
}

.orList {
    width: 160px;
    margin: 6px auto;
    border: 1px solid #DDDDDD;
    border-radius: 5px;
}

.orList .course {
    margin: 0;
    border: none;
    border-radius: initial;
    width: auto;
}

.orList .input-group-addon {
    padding: 0px;
    width: 100%;
    background-color: transparent;
    color: #333333;
    border: none;
}

.orList .input-group-addon > div {
    height: 22px;
    padding-top: 5px;
    border-radius: 4px;
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
}

.orList button {
    padding: 1px 8px;
    background-color: transparent;
    border: none;
    border-right: 1px solid #DDDDDD;
}

.orList button:hover, .orList button:active {
    background-color: inherit;
}

.orList .caret {}


.courseCode {
    margin-right: auto;
}

.courseCredits {}

/* Styling for IOPanel */

.ioPanel {
    height: 100%;
}

.ioPanel pre {
    max-height: 250px;
    overflow-x: auto;
    white-space: pre-wrap;
    margin-top: 20px;
}

.outputPanel {
    height: calc(100% - 80px);
    padding: 3px 15px 3px 3px;
    overflow-y: auto;
    overflow-x: hidden;
}

.ioPanelContainer {
    display: inline-block;
    position: absolute;
    right: 760px;
    left: 0px;
    padding-left: 15px;
    max-width: 30%;
    height: calc(100% - 94px);
    overflow-y: auto;
    overflow-x: hidden;
}

.courseInfoCard {
    margin-bottom: 20px;
}

.courseInfoCard .smallLoadingSpinner {
    padding: 0;
}

.courseInfoCard .course {
    margin-left: 0;
    font-weight: normal;
}

.cardHeading {
    font-weight: 500;
    font-size: 15px;
    padding: 8px 0;
}

.courseDescription {
    padding-bottom: 8px;
}

.courseDescription .cardHeading {
    padding-top: 0;
}

.prereqsList .cardHeading,
.coreqsList .cardHeading {
    padding-bottom: 0;
}

.ioPanel .programSelect select {
    color: #333;
}

.export a {
    cursor: pointer;
}

.validationListItem, .course {
    transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
}

.validationListItem:hover, .course.highlighted {
    background-color: rgba(0, 0, 0, 0.1);
}

.validationListItem > div {
    display: inline-block;
}

/* Styling for SearchBox */

.courseSearch {
    height: 60px;
    margin-bottom: 20px;
    padding-right: 15px;
}

.noCourses {
    padding-left: 12px;
}

/* Special styling for DND */

.dragPreview {
    margin: 0;
}

.textSelectionOff {
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: -moz-none;
    -ms-user-select: none;
    -o-user-select: none;
    user-select: none;
}

/* Special styling for small screens */

@media (max-width: 991px) {

    #react-root,
    #react-root .orList .input-group-addon,
    #react-root .orList .dropdown-menu,
    .ioPanel .export button,
    .ioPanel .export .dropdown-menu,
    .ioPanel .programSelect select,
    .ioPanel .courseSearch input,
    .ioPanel .courseSearch button,
    .ui-menu-item-wrapper {
        /*font-size: 30px;*/
    }
    
    *:not(text) {
        font-size: 30px !important;
    }

    .programSelectionDialogContent > div > div {
        width: 90% !important;
    }
    
    .courseSearch {
        height: 90px !important;
    }
    
    .courseSearch > div {
        width: 80% !important;
    }

    .courseSearch > div > div {
        height: 100px !important;
        width: 100% !important;
    }
    
    .course,
    #react-root .orList,
    #react-root .orList .dropdown-menu .course,
    .ioPanel .course {
        width: 300px;
    }

    #react-root div:not(.input-group-addon) > .course,
    #react-root .orList,
    #react-root .orList button,
    #react-root .orList .dropdown-menu .course,
    .ioPanel .course{
        height: 66px;
    }
    #react-root .orList button {
        width: 35px;
    }

    #react-root div:not(.input-group-addon) > .course,
    #react-root .orList .dropdown-menu .course,
    .ioPanel .course{
        padding-top: 12px;
    }

    #react-root .orList .input-group-addon .course,
    #react-root .orList .input-group-addon > div {
        height: 64px;
        padding-top: 18px;
    }
    
    .ioPanelContainer {
        position: relative;
        width: 100%;
        max-width: initial;
    }
    
}

/* Pretty useful to keep these tbh */

.appBar {}

.semesterListContainer {}

.exportContainer {}

.programSelect select {}

.controls {}

.prereqsList {}

.coreqsList {}

